--- a/main.org
+++ b/main.org
@@ -1,4 +1,4 @@
-#+TITLE: Hidrocarbonetos Ramificados
+#+TITLE: Hidrocarbonetos Não Ramificados
 #+AUTHOR: Fábio Lima
 #+DATE: 
 #+OPTIONS: H:2 toc:t num:t
@@ -9,12 +9,17 @@
 
 #+BEAMER_THEME: minflat
 
-#+LATEX_HEADER: % \input{packages2.tex}
+#+LATEX_HEADER:  \input{packages2.tex}
 
+#+begin_comment
 #+INCLUDE: "packages.org"
+#+end_comment
 
 #+LATEX_HEADER: \date{}
 #+LATEX_HEADER:% \usetheme{minflat}
+
+
+#+LATEX_HEADER: \DeclareExerciseCollection{Hidro}
 
 
 
@@ -25,4 +30,5 @@
 
 
 
-#+INCLUDE: "QO/Hidrocarbonetos/HidrocarbonetosII.org"
+#+INCLUDE: "QO/Hidrocarbonetos/HidrocarbonetosI.org"
+
