--- a/beamerfontthememinflat.sty
+++ b/beamerfontthememinflat.sty
@@ -24,7 +24,7 @@
 \setsansfont[Scale=.75,Ligatures={TeX},BoldFont={Museo Sans-500}]{Museo Sans-300}
 
 %\setmathfont{Latin Modern Math}
-\setmathfont{Asana-Math}
+%\setmathfont{Asana-Math}
 %\setmathfont{MinionPro-Regular}
 
 
